<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android=
    "http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_simulate"
        android:icon="@drawable/ic_bolt_24"
        android:title="@string/nav_simulate"/>

    <item
        android:id="@+id/nav_bottleneck"
        android:icon="@drawable/ic_warning_24"
        android:title="@string/nav_bottleneck"/>

    <item
        android:id="@+id/nav_unity3d"
        android:icon="@drawable/ic_3d_24"
        android:title="@string/nav_unity3d"/>

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_24"
        android:title="@string/nav_history"/>

</menu>
